fix: align all chapter examples with the book manuscript
- Realign the code examples with the published chapter structure and fix
  correctness issues found while cross-checking against the manuscript.

  Chapter rewrites:
  - ch13: use SampledObjectAlloc + SetHeapSamplingInterval (JEP 331)
    instead of VMObjectAlloc, which misses all bytecode `new` allocations
  - ch10: replace instrumentation-based counter with the book's sampling
    profiler (RunAgentThread + GetStackTrace, collapsed-stack/flamegraph
    output); add ProfilerTestApp
  - ch12: rename ch12_debugging_agent -> ch12_stability_agent and replace
    the mislabeled heap walker with the Chapter 12 stability agent
    (capability degradation, safe-shutdown pattern, chained crash
    handlers); add StabilityTestApp
  - ch04: expand into the book's thread-dump agent (thread states with
    SLEEPING-before-WAITING ordering, stack walking, line numbers)

  Correctness fixes:
  - ch05: deprecated IterateOverReachableObjects -> IterateThroughHeap
    (also fixes per-reference vs per-object miscounting)
  - ch07: clock() (CPU time) -> GetTime (wall clock); GC callbacks now do
    bookkeeping only, with the summary reported at VMDeath
  - ch08: filter JDK-internal exceptions, guard JNI calls with
    ExceptionCheck/ExceptionClear, add the advertised ExceptionCatch
    callback and VMDeath summary
  - ch11: add Agent_OnAttach with shared init, raw-monitor-protected log
    rotation, attach-time capability degradation; add DeployTestApp
  - ch02/ch03/ch09: key=value option parsing per the book, per-call error
    checks instead of OR-ing jvmtiError codes, DestroyRawMonitor at
    VMDeath

  Infrastructure:
  - jvmti_utils.h: adopt the book's 3-arg CHECK_JVMTI_ERROR macro
    (GetErrorName-based); convert all call sites
  - JvmtiCommon.cmake: drop PREFIX "" so Linux/macOS builds produce
    lib*.so matching the documented run commands; standardize all
    chapters on add_jvmti_agent; suppress unused-parameter warn